tests/toylang/neg/001128_mutation.toylang
program a = { if 0 a then sleep; } .
